# C

cmake_practice/app/: main.c
cmake_practice/math/src/: math_utils.c
cmake_test/cmake_practice_01/: CMakeLists.txt
cmake_test/cmake_practice_01/math/: CMakeLists.txt
cmake_test/cmake_practice_01/math/include/: math_utils.h
cmake_test/cmake_practice_05/: CMakeLists.txt
cmake_test/cmake_practice_05/app/: main.c
cmake_test/cmake_practice_05/math/: CMakeLists.txt
cmake_test/cmake_practice_05/math/include/: math_utils.h
cmake_test/cmake_practice_05/math/src/: mul.c  sub.c
cmake_test/cmake_practice_06/: CMakeLists.txt
cmake_test/cmake_practice_06/app/: main.c
cmake_test/cmake_practice_06/platform/: CMakeLists.txt
cmake_test/cmake_practice_06/platform/include/: platform.h  platform_config.h
cmake_test/cmake_practice_06/platform/src/: platform.c
